--- a/slides/example/index.html
+++ b/slides/example/index.html
@@ -4,13 +4,13 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=generator content="Wowchemy 5.3.0 for Hugo">
-<link rel=manifest href=/index.webmanifest>
-<link rel=icon type=image/png href=/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_32x32_fill_lanczos_center_3.png>
-<link rel=apple-touch-icon type=image/png href=/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_192x192_fill_lanczos_center_3.png>
-<link rel=canonical href=https://example.com/slides/example/>
+<link rel=manifest href=/website/index.webmanifest>
+<link rel=icon type=image/png href=/website/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_32x32_fill_lanczos_center_3.png>
+<link rel=apple-touch-icon type=image/png href=/website/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_192x192_fill_lanczos_center_3.png>
+<link rel=canonical href=https://davidaparicio.github.io/website/slides/example/>
 <title>Slides | Academic</title>
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.0/reveal.min.css><link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.0/theme/black.min.css><link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.2.0/styles/dracula.min.css crossorigin=anonymous id=highlight-theme>
-<link rel=stylesheet href=/css/reveal_custom.min.css>
+<link rel=stylesheet href=/website/css/reveal_custom.min.css>
 </head>
 <body>
 <div class=reveal>
@@ -154,6 +154,6 @@ Three
 <script src=https://cdn.jsdelivr.net/npm/reveal.js-menu@2.1.0/plugin.js integrity="sha256-M6JwAjnRAWmi+sbXURR/yAhWZKYhAw7YXnnLvIxrdGs=" crossorigin=anonymous></script>
 <script src=https://cdn.jsdelivr.net/npm/reveal.js-menu@2.1.0/menu.js integrity="sha256-l14dklFcW5mWar6w/9KaW0fWVerf3mYr7Wt0+rXzFAA=" crossorigin=anonymous></script>
 <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/reveal.js-menu@2.1.0/menu.css integrity="sha256-0fU8HKLaTjgzfaV9CgSqbsN8ilA3zo6zK1M6rlgULd8=" crossorigin=anonymous>
-<script src=/js/wowchemy-slides.js></script>
+<script src=/website/js/wowchemy-slides.js></script>
 </body>
 </html>
