deploy: cec0898ba54764408aa0c46cce9f53c64dc8e740

--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
 <div class=section-subheading>Big Data</div>
 </div>
 <div class="col-12 col-sm-4">
-<div class=featurette-icon><i class="fas fa-project-diagram"></i></div>
-<div class=section-subheading>Distributed Systems</div>
+<div class=featurette-icon><i class="fas fa-user-secret"></i></div>
+<div class=section-subheading>Security</div>
 </div>
 </div>
 </div>
