deploy: 5b1b7be8526cc8289c70698ca6cb8675d713aacf

--- a/404.html
+++ b/404.html
@@ -124,14 +124,15 @@
 <h2>Latest</h2>
 <ul>
 <li><a href=/website/event/>Recent & Upcoming Talks</a></li>
-<li><a href=/website/talk/example-talk/>Example Talk</a></li>
-<li><a href=/website/slides/example/>Slides</a></li>
+<li><a href=/website/talk/iaas-interruption-as-a-sageness/>IaaS (Interruption as a Sageness)</a></li>
+<li><a href=/website/talk/5-conseils-pour-soumettre-son-premier-cfp/>5 Conseils pour soumettre son premier CFP</a></li>
+<li><a href=/website/talk/la-securite-des-la-conception-du-projet/>La Sécurité dès la conception du projet</a></li>
+<li><a href=/website/talk/la-securite-des-la-conception-du-projet/>La Sécurité dès la conception du projet</a></li>
 <li><a href=/website/slides/>Slides</a></li>
+<li><a href=/website/talk/la-sauvegarde-de-kerberos/>La Sauvegarde de Kerberos</a></li>
+<li><a href=/website/slides/ssc2019/>Agilité et sécurité numériques, Cas concret avec la sauvegarde automatisée de Kerberos</a></li>
+<li><a href=/website/slides/example/>Slides</a></li>
 <li><a href=/website/project/>Projects</a></li>
-<li><a href=/website/project/example/>Example Project</a></li>
-<li><a href=/website/publication/>Publications</a></li>
-<li><a href=/website/publication/transactional_memories/>A Study of Factors External to Software Transactional Memories that Affect their Speed-up</a></li>
-<li><a href=/website/post/>Posts</a></li>
 </ul>
 </div>
 </div>
