--- a/slides/ssc2019/index.html
+++ b/slides/ssc2019/index.html
@@ -5,10 +5,10 @@
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=generator content="Wowchemy 5.3.0 for Hugo">
 <link rel=manifest href=/website/index.webmanifest>
-<link rel=icon type=image/png href=/website/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_32x32_fill_lanczos_center_3.png>
-<link rel=apple-touch-icon type=image/png href=/website/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_192x192_fill_lanczos_center_3.png>
+<link rel=icon type=image/png href=/website/media/icon_hu5f90374de83a434faccdfc0ad39c44da_563627_32x32_fill_lanczos_center_3.png>
+<link rel=apple-touch-icon type=image/png href=/website/media/icon_hu5f90374de83a434faccdfc0ad39c44da_563627_192x192_fill_lanczos_center_3.png>
 <link rel=canonical href=https://davidaparicio.github.io/website/slides/ssc2019/>
-<title>Agilité et sécurité numériques, Cas concret avec la sauvegarde automatisée de Kerberos | Academic</title>
+<title>Agilité et sécurité numériques, Cas concret avec la sauvegarde automatisée de Kerberos | David Aparicio</title>
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.0/reveal.min.css><link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.0/theme/white.min.css><link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.2.0/styles/dracula.min.css crossorigin=anonymous id=highlight-theme>
 <link rel=stylesheet href=/website/css/reveal_custom.min.css>
 </head>
