deploy: 45db8bd097e71f600cd409ef85311d6acfc544a7

--- a/404.html
+++ b/404.html
@@ -128,11 +128,11 @@
 <li><a href=/website/talk/5-conseils-pour-soumettre-son-premier-cfp/>5 Conseils pour soumettre son premier CFP</a></li>
 <li><a href=/website/talk/la-securite-des-la-conception-du-projet/>La Sécurité dès la conception du projet</a></li>
 <li><a href=/website/talk/la-securite-des-la-conception-du-projet/>La Sécurité dès la conception du projet</a></li>
+<li><a href=/website/talk/security-by-design/>Security By Design</a></li>
 <li><a href=/website/slides/>Slides</a></li>
 <li><a href=/website/talk/la-sauvegarde-de-kerberos/>La Sauvegarde de Kerberos</a></li>
 <li><a href=/website/slides/ssc2019/>Agilité et sécurité numériques, Cas concret avec la sauvegarde automatisée de Kerberos</a></li>
 <li><a href=/website/slides/example/>Slides</a></li>
-<li><a href=/website/project/>Projects</a></li>
 </ul>
 </div>
 </div>
