--- a/index.html
+++ b/index.html
@@ -621,20 +621,20 @@ Video
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
-<a href=/website/talk/la-sauvegarde-de-kerberos/>La Sauvegarde de Kerberos</a>
+<a href=/website/talk/security-by-design/>Security By Design</a>
 </div>
-<a href=/website/talk/la-sauvegarde-de-kerberos/ class=summary-link>
+<a href=/website/talk/security-by-design/ class=summary-link>
 <div class=article-style>
-Étant même dans le réseau interne d’un datacenter, nous ne sommes pas à l’abri d’une intrusion. Le risque 0 n&rsquo;existe pas
+Sauvegarde automatique de Kerberos
 </div>
 </a>
 <div class="stream-meta article-metadata">
 <div>
 <span>
-8 Oct 2019 18:00 &mdash; 18:30
+13 Feb 2020 19:20 &mdash; 21:00
 </span>
 <span class=middot-divider></span>
-<span>Inria Sophia Antipolis (Canceled)</span>
+<span>Zenika</span>
 </div>
 <div>
 <span>
@@ -642,16 +642,22 @@ David Aparicio</span>
 </div>
 </div>
 <div class=btn-links>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=/website/slides/ssc2019/ target=_blank>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://davidaparicio.gitlab.io/200213-gdglyon/ target=_blank rel=noopener>
 Slides
 </a>
 </div>
 </div>
 <div class=ml-3>
-<a href=/website/talk/la-sauvegarde-de-kerberos/>
-<img src=/website/talk/la-sauvegarde-de-kerberos/featured_hubf80c8e9273fd19d5aeb1fd5f32c0704_143227_150x0_resize_q75_lanczos.jpg alt="La Sauvegarde de Kerberos" loading=lazy>
+<a href=/website/talk/security-by-design/>
+<img src=/website/talk/security-by-design/featured_hubf80c8e9273fd19d5aeb1fd5f32c0704_133002_150x0_resize_q75_lanczos.jpg alt="Security By Design" loading=lazy>
 </a>
 </div>
+</div>
+<div class=see-all>
+<a href=/website/event/>
+See all events
+<i class="fas fa-angle-right"></i>
+</a>
 </div>
 </div>
 </div>
@@ -720,7 +726,7 @@ Cite
 <a href=/website/tag/conference/ style=font-size:.7rem>Conference</a>
 <a href=/website/tag/deep-learning/ style=font-size:.7rem>Deep Learning</a>
 <a href=/website/tag/podcast/ style=font-size:.7rem>Podcast</a>
-<a href=/website/tag/security/ style=font-size:1.819759050990822rem>Security</a>
+<a href=/website/tag/security/ style=font-size:1.8677177222151053rem>Security</a>
 <a href=/website/tag/sre/ style=font-size:.7rem>SRE</a>
 </div>
 </div>
