deploy: 3ca8d5f9c48dbe18bd29f1bd3893aa21eb5a2e2f

--- a/index.html
+++ b/index.html
@@ -545,6 +545,36 @@ David Aparicio</span>
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
+<a href=/website/talk/talk-only-no-slides-iaas/>Talk only (No slides) IaaS</a>
+</div>
+<a href=/website/talk/talk-only-no-slides-iaas/ class=summary-link>
+<div class=article-style>
+Fastly a eu un outage 8/6/21, que pouvons-nous apprendre de ce dernier ?
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+2 Jul 2021 14:00 &mdash; 14:50
+</span>
+<span class=middot-divider></span>
+<span>Lac Perrin (Base nautique)</span>
+</div>
+<div>
+<span>
+David Aparicio</span>
+</div>
+</div>
+</div>
+<div class=ml-3>
+<a href=/website/talk/talk-only-no-slides-iaas/>
+<img src=/website/talk/talk-only-no-slides-iaas/featured_huafc2ce59fa20de29577b0c83674b3b16_668885_150x0_resize_q75_lanczos.jpg alt="Talk only (No slides) IaaS" loading=lazy>
+</a>
+</div>
+</div>
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
 <a href=/website/talk/la-securite-des-la-conception-du-projet/>La Sécurité dès la conception du projet</a>
 </div>
 <a href=/website/talk/la-securite-des-la-conception-du-projet/ class=summary-link>
@@ -615,41 +645,6 @@ Video
 <div class=ml-3>
 <a href=/website/talk/la-securite-des-la-conception-du-projet/>
 <img src=/website/talk/la-securite-des-la-conception-du-projet/featured_huae9f934fa0e1e16292c5751be2d68bfe_49257_150x0_resize_q75_lanczos.jpg alt="La Sécurité dès la conception du projet" loading=lazy>
-</a>
-</div>
-</div>
-<div class="media stream-item">
-<div class=media-body>
-<div class="section-subheading article-title mb-0 mt-0">
-<a href=/website/talk/security-by-design/>Security By Design</a>
-</div>
-<a href=/website/talk/security-by-design/ class=summary-link>
-<div class=article-style>
-Sauvegarde automatique de Kerberos
-</div>
-</a>
-<div class="stream-meta article-metadata">
-<div>
-<span>
-13 Feb 2020 19:20 &mdash; 21:00
-</span>
-<span class=middot-divider></span>
-<span>Zenika</span>
-</div>
-<div>
-<span>
-David Aparicio</span>
-</div>
-</div>
-<div class=btn-links>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://davidaparicio.gitlab.io/200213-gdglyon/ target=_blank rel=noopener>
-Slides
-</a>
-</div>
-</div>
-<div class=ml-3>
-<a href=/website/talk/security-by-design/>
-<img src=/website/talk/security-by-design/featured_hubf80c8e9273fd19d5aeb1fd5f32c0704_133002_150x0_resize_q75_lanczos.jpg alt="Security By Design" loading=lazy>
 </a>
 </div>
 </div>
@@ -727,7 +722,7 @@ Cite
 <a href=/website/tag/deep-learning/ style=font-size:.7rem>Deep Learning</a>
 <a href=/website/tag/podcast/ style=font-size:.7rem>Podcast</a>
 <a href=/website/tag/security/ style=font-size:1.8677177222151053rem>Security</a>
-<a href=/website/tag/sre/ style=font-size:.7rem>SRE</a>
+<a href=/website/tag/sre/ style=font-size:1.202908649404904rem>SRE</a>
 </div>
 </div>
 </div>
