--- a/404.html
+++ b/404.html
@@ -126,13 +126,13 @@
 <li><a href=/website/event/>Recent & Upcoming Talks</a></li>
 <li><a href=/website/talk/iaas-interruption-as-a-sageness/>IaaS (Interruption as a Sageness)</a></li>
 <li><a href=/website/talk/5-conseils-pour-soumettre-son-premier-cfp/>5 Conseils pour soumettre son premier CFP</a></li>
+<li><a href=/website/talk/talk-only-no-slides-iaas/>Talk only (No slides) IaaS</a></li>
 <li><a href=/website/talk/la-securite-des-la-conception-du-projet/>La Sécurité dès la conception du projet</a></li>
 <li><a href=/website/talk/la-securite-des-la-conception-du-projet/>La Sécurité dès la conception du projet</a></li>
-<li><a href=/website/talk/security-by-design/>Security By Design</a></li>
-<li><a href=/website/slides/>Slides</a></li>
 <li><a href=/website/talk/la-sauvegarde-de-kerberos/>La Sauvegarde de Kerberos</a></li>
+<li><a href=/website/slides/>Slides</a></li>
 <li><a href=/website/slides/ssc2019/>Agilité et sécurité numériques, Cas concret avec la sauvegarde automatisée de Kerberos</a></li>
-<li><a href=/website/slides/example/>Slides</a></li>
+<li><a href=/website/talk/agilite-et-securite-numeriques/>Agilité et sécurité numériques</a></li>
 </ul>
 </div>
 </div>
