--- a/event/index.html
+++ b/event/index.html
@@ -203,6 +203,36 @@ David Aparicio</span>
 </a>
 </div>
 </div>
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/website/talk/talk-only-no-slides-iaas/>Talk only (No slides) IaaS</a>
+</div>
+<a href=/website/talk/talk-only-no-slides-iaas/ class=summary-link>
+<div class=article-style>
+Fastly a eu un outage 8/6/21, que pouvons-nous apprendre de ce dernier ?
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+2 Jul 2021 14:00 &mdash; 14:50
+</span>
+<span class=middot-divider></span>
+<span>Lac Perrin (Base nautique)</span>
+</div>
+<div>
+<span>
+David Aparicio</span>
+</div>
+</div>
+</div>
+<div class=ml-3>
+<a href=/website/talk/talk-only-no-slides-iaas/>
+<img src=/website/talk/talk-only-no-slides-iaas/featured_huafc2ce59fa20de29577b0c83674b3b16_668885_150x0_resize_q75_lanczos.jpg alt="Talk only (No slides) IaaS" loading=lazy>
+</a>
+</div>
+</div>
 </div>
 </div>
 <div class=row id=talk_list>
@@ -289,11 +319,11 @@ Video
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
-<a href=/website/talk/security-by-design/>Security By Design</a>
+<a href=/website/talk/la-sauvegarde-de-kerberos/>La Sauvegarde de Kerberos</a>
 </div>
-<a href=/website/talk/security-by-design/ class=summary-link>
+<a href=/website/talk/la-sauvegarde-de-kerberos/ class=summary-link>
 <div class=article-style>
-Sauvegarde automatique de Kerberos
+Comment intégrer la sécurité dès les premières phases d&rsquo;un projet
 </div>
 </a>
 <div class="stream-meta article-metadata">
@@ -316,8 +346,8 @@ Slides
 </div>
 </div>
 <div class=ml-3>
-<a href=/website/talk/security-by-design/>
-<img src=/website/talk/security-by-design/featured_hubf80c8e9273fd19d5aeb1fd5f32c0704_133002_150x0_resize_q75_lanczos.jpg alt="Security By Design" loading=lazy>
+<a href=/website/talk/la-sauvegarde-de-kerberos/>
+<img src=/website/talk/la-sauvegarde-de-kerberos/featured_hubf80c8e9273fd19d5aeb1fd5f32c0704_133002_150x0_resize_q75_lanczos.jpg alt="La Sauvegarde de Kerberos" loading=lazy>
 </a>
 </div>
 </div>
@@ -331,9 +361,9 @@ Slides
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
-<a href=/website/talk/la-sauvegarde-de-kerberos/>La Sauvegarde de Kerberos</a>
+<a href=/website/talk/agilite-et-securite-numeriques/>Agilité et sécurité numériques</a>
 </div>
-<a href=/website/talk/la-sauvegarde-de-kerberos/ class=summary-link>
+<a href=/website/talk/agilite-et-securite-numeriques/ class=summary-link>
 <div class=article-style>
 Étant même dans le réseau interne d’un datacenter, nous ne sommes pas à l’abri d’une intrusion. Le risque 0 n&rsquo;existe pas
 </div>
@@ -358,8 +388,8 @@ Slides
 </div>
 </div>
 <div class=ml-3>
-<a href=/website/talk/la-sauvegarde-de-kerberos/>
-<img src=/website/talk/la-sauvegarde-de-kerberos/featured_hubf80c8e9273fd19d5aeb1fd5f32c0704_143227_150x0_resize_q75_lanczos.jpg alt="La Sauvegarde de Kerberos" loading=lazy>
+<a href=/website/talk/agilite-et-securite-numeriques/>
+<img src=/website/talk/agilite-et-securite-numeriques/featured_hubf80c8e9273fd19d5aeb1fd5f32c0704_143227_150x0_resize_q75_lanczos.jpg alt="Agilité et sécurité numériques" loading=lazy>
 </a>
 </div>
 </div>
