deploy: 9ba720e84486ab0e71ed282f39fba785b0203e5e

--- a/404.html
+++ b/404.html
@@ -126,7 +126,7 @@
 <li><a href=/website/event/>Recent & Upcoming Talks</a></li>
 <li><a href=/website/talk/iaas-interruption-as-a-sageness/>IaaS (Interruption as a Sageness)</a></li>
 <li><a href=/website/talk/5-conseils-pour-soumettre-son-premier-cfp/>5 Conseils pour soumettre son premier CFP</a></li>
-<li><a href=/website/talk/talk-only-no-slides-iaas/>Talk only (No slides) IaaS</a></li>
+<li><a href=/website/talk/iaas-talk-only-no-slides/>IaaS, talk only (no slides)</a></li>
 <li><a href=/website/talk/la-securite-des-la-conception-du-projet/>La Sécurité dès la conception du projet</a></li>
 <li><a href=/website/talk/la-securite-des-la-conception-du-projet/>La Sécurité dès la conception du projet</a></li>
 <li><a href=/website/talk/la-sauvegarde-de-kerberos/>La Sauvegarde de Kerberos</a></li>
