--- a/event/index.html
+++ b/event/index.html
@@ -206,11 +206,11 @@ David Aparicio</span>
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
-<a href=/website/talk/talk-only-no-slides-iaas/>Talk only (No slides) IaaS</a>
+<a href=/website/talk/iaas-talk-only-no-slides/>IaaS, talk only (no slides)</a>
 </div>
-<a href=/website/talk/talk-only-no-slides-iaas/ class=summary-link>
+<a href=/website/talk/iaas-talk-only-no-slides/ class=summary-link>
 <div class=article-style>
-Fastly a eu un outage 8/6/21, que pouvons-nous apprendre de ce dernier ?
+Fastly a eu un outage 8 Juin 2021, quoi de neuf ?
 </div>
 </a>
 <div class="stream-meta article-metadata">
@@ -228,8 +228,8 @@ David Aparicio</span>
 </div>
 </div>
 <div class=ml-3>
-<a href=/website/talk/talk-only-no-slides-iaas/>
-<img src=/website/talk/talk-only-no-slides-iaas/featured_huafc2ce59fa20de29577b0c83674b3b16_668885_150x0_resize_q75_lanczos.jpg alt="Talk only (No slides) IaaS" loading=lazy>
+<a href=/website/talk/iaas-talk-only-no-slides/>
+<img src=/website/talk/iaas-talk-only-no-slides/featured_huafc2ce59fa20de29577b0c83674b3b16_668885_150x0_resize_q75_lanczos.jpg alt="IaaS, talk only (no slides)" loading=lazy>
 </a>
 </div>
 </div>
@@ -332,7 +332,7 @@ Comment intégrer la sécurité dès les premières phases d&rsquo;un projet
 13 Feb 2020 19:20 &mdash; 21:00
 </span>
 <span class=middot-divider></span>
-<span>Zenika</span>
+<span>Zenika Lyon</span>
 </div>
 <div>
 <span>
