--- a/talk/iaas-interruption-as-a-sageness/index.html
+++ b/talk/iaas-interruption-as-a-sageness/index.html
@@ -226,7 +226,7 @@ JUG SummerCamp 2021
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
-<li><a href=/website/talk/talk-only-no-slides-iaas/>Talk only (No slides) IaaS</a></li>
+<li><a href=/website/talk/iaas-talk-only-no-slides/>IaaS, talk only (no slides)</a></li>
 </ul>
 </div>
 </div>
