--- a/404.html
+++ b/404.html
@@ -124,6 +124,7 @@
 <h2>Latest</h2>
 <ul>
 <li><a href=/website/event/>Recent & Upcoming Talks</a></li>
+<li><a href=/website/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor, raconte nous une histoire (d'OPS)</a></li>
 <li><a href=/website/talk/iaas-interruption-as-a-sageness/>IaaS (Interruption as a Sageness)</a></li>
 <li><a href=/website/talk/5-conseils-pour-soumettre-son-premier-cfp/>5 Conseils pour soumettre son premier CFP</a></li>
 <li><a href=/website/talk/iaas-talk-only-no-slides/>IaaS, talk only (no slides)</a></li>
@@ -132,7 +133,6 @@
 <li><a href=/website/talk/la-sauvegarde-de-kerberos/>La Sauvegarde de Kerberos</a></li>
 <li><a href=/website/slides/>Slides</a></li>
 <li><a href=/website/slides/ssc2019/>Agilité et sécurité numériques, Cas concret avec la sauvegarde automatisée de Kerberos</a></li>
-<li><a href=/website/talk/agilite-et-securite-numeriques/>Agilité et sécurité numériques</a></li>
 </ul>
 </div>
 </div>
