--- a/event/index.html
+++ b/event/index.html
@@ -381,6 +381,41 @@ Slides
 </a>
 </div>
 </div>
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/website/talk/security-by-design/>Security By Design</a>
+</div>
+<a href=/website/talk/security-by-design/ class=summary-link>
+<div class=article-style>
+ReX d&rsquo;une impémentation à AMADEUS (Sophia-Antipolis)
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+11 Feb 2020 19:30 &mdash; 19:40
+</span>
+<span class=middot-divider></span>
+<span>Now Coworking Lyon</span>
+</div>
+<div>
+<span>
+David Aparicio</span>
+</div>
+</div>
+<div class=btn-links>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://davidaparicio.gitlab.io/200211-humantalks/ target=_blank rel=noopener>
+Slides
+</a>
+</div>
+</div>
+<div class=ml-3>
+<a href=/website/talk/security-by-design/>
+<img src=/website/talk/security-by-design/featured_hubf80c8e9273fd19d5aeb1fd5f32c0704_75452_150x0_resize_q75_lanczos.jpg alt="Security By Design" loading=lazy>
+</a>
+</div>
+</div>
 </div>
 </div>
 <div class=row id=talk_list>
