--- a/talk/la-securite-des-la-conception-du-projet/index.html
+++ b/talk/la-securite-des-la-conception-du-projet/index.html
@@ -234,6 +234,7 @@ JUG SummerCamp 2020
 <ul>
 <li><a href=/website/talk/la-securite-des-la-conception-du-projet/>La Sécurité dès la conception du projet</a></li>
 <li><a href=/website/talk/la-sauvegarde-de-kerberos/>La Sauvegarde de Kerberos</a></li>
+<li><a href=/website/talk/security-by-design/>Security By Design</a></li>
 <li><a href=/website/talk/agilite-et-securite-numeriques/>Agilité et sécurité numériques</a></li>
 <li><a href=/website/slides/ssc2019/>Agilité et sécurité numériques, Cas concret avec la sauvegarde automatisée de Kerberos</a></li>
 </ul>
