--- a/talk/security-by-design/index.html
+++ b/talk/security-by-design/index.html
@@ -187,8 +187,8 @@ Human Talks Février 2020
 <div class=article-style>
 <div class="alert alert-note">
 <div>
-This conference was given as a big version <a href=talk/la-sauvegarde-de-kerberos/>GDG Cloud & Iot Lyon (1h)</a> (<a href=https://davidaparicio.gitlab.io/200213-gdglyon/>slides</a>)
-It was a proposal (accepted) for <a href=talk/agilite-et-securite-numeriques/>Sophia Security Camp 2019</a>
+This conference was given as a big version <a href=../la-sauvegarde-de-kerberos/>GDG Cloud & Iot Lyon (1h)</a> (<a href=https://davidaparicio.gitlab.io/200213-gdglyon/>slides</a>)
+It was a proposal (accepted) for <a href=../agilite-et-securite-numeriques/>Sophia Security Camp 2019</a>
 </div>
 </div>
 </div>
