--- a/talk/iaas-talk-only-no-slides/index.html
+++ b/talk/iaas-talk-only-no-slides/index.html
@@ -228,6 +228,8 @@ Riviera DEV 2021
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/website/talk/iaas-interruption-as-a-sageness/>IaaS (Interruption as a Sageness)</a></li>
+<li><a href=/website/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor, raconte nous une histoire (d'OPS)</a></li>
 <li><a href=/website/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor, raconte nous une histoire (d'OPS)</a></li>
 <li><a href=/website/talk/iaas-interruption-as-a-sageness/>IaaS (Interruption as a Sageness)</a></li>
 </ul>
