--- a/event/index.html
+++ b/event/index.html
@@ -201,7 +201,7 @@ L&rsquo;analyse des erreurs des plus grands, pour apprendre
 <div class="stream-meta article-metadata">
 <div>
 <span>
-7 Oct 2021 14:30 &mdash; 15:15
+7 Oct 2021 14:30 &mdash; 15:30
 </span>
 <span class=middot-divider></span>
 <span>Online</span>
@@ -211,10 +211,52 @@ L&rsquo;analyse des erreurs des plus grands, pour apprendre
 David Aparicio</span>
 </div>
 </div>
+<div class=btn-links>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=/website/talks/CloudNord2021_PereCastor.pdf target=_blank rel=noopener>
+Slides
+</a>
+</div>
 </div>
 <div class=ml-3>
 <a href=/website/talk/pere-castor-raconte-nous-une-histoire-dops/>
-<img src=/website/talk/pere-castor-raconte-nous-une-histoire-dops/featured_hubf80c8e9273fd19d5aeb1fd5f32c0704_166804_150x0_resize_q75_lanczos.jpg alt="Père Castor, raconte nous une histoire (d'OPS)" loading=lazy>
+<img src=/website/talk/pere-castor-raconte-nous-une-histoire-dops/featured_hu32a5bac877dc9d95a9bc45833af2caf8_177406_150x0_resize_q75_lanczos.jpg alt="Père Castor, raconte nous une histoire (d'OPS)" loading=lazy>
+</a>
+</div>
+</div>
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/website/talk/les-briques-du-cloud-speciale-cloud-nord-s01e01/>Les Briques du Cloud - Spéciale Cloud Nord (S01E01)</a>
+</div>
+<a href=/website/talk/les-briques-du-cloud-speciale-cloud-nord-s01e01/ class=summary-link>
+<div class=article-style>
+Table ronde - Les Rendez-vous des Speakers
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+7 Oct 2021 12:15 &mdash; 13:15
+</span>
+<span class=middot-divider></span>
+<span>Online</span>
+</div>
+<div>
+<span>
+David Aparicio</span>
+</div>
+</div>
+<div class=btn-links>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://www.twitch.tv/videos/1169837703 target=_blank rel=noopener>
+Video
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://twitter.com/dadideo/status/1446073878304935940 target=_blank rel=noopener>
+<i class="fab fa-twitter mr-1"></i>Twitter</a>
+</div>
+</div>
+<div class=ml-3>
+<a href=/website/talk/les-briques-du-cloud-speciale-cloud-nord-s01e01/>
+<img src=/website/talk/les-briques-du-cloud-speciale-cloud-nord-s01e01/featured_hu535661bce2c742bf7a0f6a055ac0b6d1_195179_150x0_resize_q75_lanczos.jpg alt="Les Briques du Cloud - Spéciale Cloud Nord (S01E01)" loading=lazy>
 </a>
 </div>
 </div>
