--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@ L&rsquo;analyse des erreurs des plus grands, pour apprendre
 <div class="stream-meta article-metadata">
 <div>
 <span>
-7 Oct 2021 14:30 &mdash; 15:15
+7 Oct 2021 14:30 &mdash; 15:30
 </span>
 <span class=middot-divider></span>
 <span>Online</span>
@@ -550,10 +550,52 @@ L&rsquo;analyse des erreurs des plus grands, pour apprendre
 David Aparicio</span>
 </div>
 </div>
+<div class=btn-links>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=/website/talks/CloudNord2021_PereCastor.pdf target=_blank rel=noopener>
+Slides
+</a>
+</div>
 </div>
 <div class=ml-3>
 <a href=/website/talk/pere-castor-raconte-nous-une-histoire-dops/>
-<img src=/website/talk/pere-castor-raconte-nous-une-histoire-dops/featured_hubf80c8e9273fd19d5aeb1fd5f32c0704_166804_150x0_resize_q75_lanczos.jpg alt="Père Castor, raconte nous une histoire (d'OPS)" loading=lazy>
+<img src=/website/talk/pere-castor-raconte-nous-une-histoire-dops/featured_hu32a5bac877dc9d95a9bc45833af2caf8_177406_150x0_resize_q75_lanczos.jpg alt="Père Castor, raconte nous une histoire (d'OPS)" loading=lazy>
+</a>
+</div>
+</div>
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/website/talk/les-briques-du-cloud-speciale-cloud-nord-s01e01/>Les Briques du Cloud - Spéciale Cloud Nord (S01E01)</a>
+</div>
+<a href=/website/talk/les-briques-du-cloud-speciale-cloud-nord-s01e01/ class=summary-link>
+<div class=article-style>
+Table ronde - Les Rendez-vous des Speakers
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+7 Oct 2021 12:15 &mdash; 13:15
+</span>
+<span class=middot-divider></span>
+<span>Online</span>
+</div>
+<div>
+<span>
+David Aparicio</span>
+</div>
+</div>
+<div class=btn-links>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://www.twitch.tv/videos/1169837703 target=_blank rel=noopener>
+Video
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://twitter.com/dadideo/status/1446073878304935940 target=_blank rel=noopener>
+<i class="fab fa-twitter mr-1"></i>Twitter</a>
+</div>
+</div>
+<div class=ml-3>
+<a href=/website/talk/les-briques-du-cloud-speciale-cloud-nord-s01e01/>
+<img src=/website/talk/les-briques-du-cloud-speciale-cloud-nord-s01e01/featured_hu535661bce2c742bf7a0f6a055ac0b6d1_195179_150x0_resize_q75_lanczos.jpg alt="Les Briques du Cloud - Spéciale Cloud Nord (S01E01)" loading=lazy>
 </a>
 </div>
 </div>
@@ -589,46 +631,6 @@ Slides
 <div class=ml-3>
 <a href=/website/talk/iaas-interruption-as-a-sageness/>
 <img src=/website/talk/iaas-interruption-as-a-sageness/featured_huf13a6512c5a184f3a3403242e2b999f5_55441_150x0_resize_q75_lanczos.jpg alt="IaaS (Interruption as a Sageness)" loading=lazy>
-</a>
-</div>
-</div>
-<div class="media stream-item">
-<div class=media-body>
-<div class="section-subheading article-title mb-0 mt-0">
-<a href=/website/talk/5-conseils-pour-soumettre-son-premier-cfp/>5 Conseils pour soumettre son premier CFP</a>
-</div>
-<a href=/website/talk/5-conseils-pour-soumettre-son-premier-cfp/ class=summary-link>
-<div class=article-style>
-Speaker d&rsquo;un jour, mes premiers retours
-</div>
-</a>
-<div class="stream-meta article-metadata">
-<div>
-<span>
-4 Aug 2021 18:00 &mdash; 18:30
-</span>
-<span class=middot-divider></span>
-<span>Interview WLD</span>
-</div>
-<div>
-<span>
-David Aparicio</span>
-</div>
-</div>
-<div class=btn-links>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://anchor.fm/cloud-nord-x-welovedevs/episodes/5-Conseils--Soumettre-son-premier-CFP-avec-David-Aparicio---OVHcloud-e15f7i4/a-a69dp1b target=_blank rel=noopener>
-<i class="fas fa-headphones mr-1"></i>Listen</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://open.spotify.com/episode/2oVKdbJKi5Px3MJuzksD5p?si=gvuir7zlRqKNYnY7i0yzWw&dl_branch=1" target=_blank rel=noopener>
-<i class="fab fa-spotify mr-1"></i>Spotify</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://anchor.fm/s/5ee273dc/podcast/rss target=_blank rel=noopener>
-<i class="fas fa-rss mr-1"></i>RSS</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://youtu.be/LWxe41DaONw target=_blank rel=noopener>
-<i class="fab fa-youtube mr-1"></i>Youtube</a>
-</div>
-</div>
-<div class=ml-3>
-<a href=/website/talk/5-conseils-pour-soumettre-son-premier-cfp/>
-<img src=/website/talk/5-conseils-pour-soumettre-son-premier-cfp/featured_hue7b1d866b5906aab8219eeac64c943f2_45716_150x0_resize_q75_lanczos.jpg alt="5 Conseils pour soumettre son premier CFP" loading=lazy>
 </a>
 </div>
 </div>
@@ -702,6 +704,7 @@ Cite
 </div>
 <div class="col-12 col-lg-8">
 <div class=tag-cloud>
+<a href=/website/tag/cloud/ style=font-size:.7rem>Cloud</a>
 <a href=/website/tag/conference/ style=font-size:.7rem>Conference</a>
 <a href=/website/tag/deep-learning/ style=font-size:.7rem>Deep Learning</a>
 <a href=/website/tag/podcast/ style=font-size:.7rem>Podcast</a>
