deploy: efda16263fedb81ee405c6eb5df710476c1e490b

--- a/talk/iaas-interruption-as-a-sageness/index.html
+++ b/talk/iaas-interruption-as-a-sageness/index.html
@@ -226,8 +226,8 @@ JUG SummerCamp 2021
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
-<li><a href=/website/talk/iaas-interruption-as-a-sageness/>IaaS (Interruption as a Sageness)</a></li>
-<li><a href=/website/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor, raconte nous une histoire (d'OPS)</a></li>
+<li><a href=/website/talk/iaas-interruption-as-a-sageness-2/>IaaS (Interruption as a Sageness) 2</a></li>
+<li><a href=/website/talk/meetup-pere-castor/>Meetup Père Castor</a></li>
 <li><a href=/website/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor, raconte nous une histoire (d'OPS)</a></li>
 <li><a href=/website/talk/iaas-talk-only-no-slides/>IaaS, talk only (no slides)</a></li>
 </ul>
