--- a/404.html
+++ b/404.html
@@ -124,8 +124,8 @@
 <h2>Latest</h2>
 <ul>
 <li><a href=/website/event/>Recent & Upcoming Talks</a></li>
-<li><a href=/website/talk/iaas-interruption-as-a-sageness-2/>IaaS (Interruption as a Sageness) 2</a></li>
-<li><a href=/website/talk/meetup-pere-castor/>Meetup Père Castor</a></li>
+<li><a href=/website/talk/iaas-interruption-as-a-sageness/>IaaS - Interruption as a Sageness</a></li>
+<li><a href=/website/talk/pere-castor-format-meetup/>Père Castor (Format Meetup)</a></li>
 <li><a href=/website/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor, raconte nous une histoire (d'OPS)</a></li>
 <li><a href=/website/talk/les-briques-du-cloud-speciale-cloud-nord-s01e01/>Les Briques du Cloud - Spéciale Cloud Nord (S01E01)</a></li>
 <li><a href=/website/talk/iaas-interruption-as-a-sageness/>IaaS (Interruption as a Sageness)</a></li>
