deploy: d795d8d7851899c7913d047108727bea6c3fb833

--- a/404.html
+++ b/404.html
@@ -132,7 +132,7 @@
 <li><a href=/website/talk/5-conseils-pour-soumettre-son-premier-cfp/>5 Conseils pour soumettre son premier CFP</a></li>
 <li><a href=/website/talk/iaas-talk-only-no-slides/>IaaS, talk only (no slides)</a></li>
 <li><a href=/website/talk/la-securite-des-la-conception-du-projet/>La Sécurité dès la conception du projet</a></li>
-<li><a href=/website/talk/la-securite-des-la-conception-du-projet/>La Sécurité dès la conception du projet</a></li>
+<li><a href=/website/talk/la-securite-des-la-conception-du-projet-quickie/>La Sécurité dès la conception du projet (quickie)</a></li>
 </ul>
 </div>
 </div>
