--- a/event/index.html
+++ b/event/index.html
@@ -413,9 +413,9 @@ Video
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
-<a href=/website/talk/la-securite-des-la-conception-du-projet/>La Sécurité dès la conception du projet</a>
+<a href=/website/talk/la-securite-des-la-conception-du-projet-quickie/>La Sécurité dès la conception du projet (quickie)</a>
 </div>
-<a href=/website/talk/la-securite-des-la-conception-du-projet/ class=summary-link>
+<a href=/website/talk/la-securite-des-la-conception-du-projet-quickie/ class=summary-link>
 <div class=article-style>
 Penser une démarche préventive dès la phase de conception d&rsquo;un projet
 </div>
@@ -443,8 +443,8 @@ Video
 </div>
 </div>
 <div class=ml-3>
-<a href=/website/talk/la-securite-des-la-conception-du-projet/>
-<img src=/website/talk/la-securite-des-la-conception-du-projet/featured_huae9f934fa0e1e16292c5751be2d68bfe_49257_150x0_resize_q75_lanczos.jpg alt="La Sécurité dès la conception du projet" loading=lazy>
+<a href=/website/talk/la-securite-des-la-conception-du-projet-quickie/>
+<img src=/website/talk/la-securite-des-la-conception-du-projet-quickie/featured_huae9f934fa0e1e16292c5751be2d68bfe_49257_150x0_resize_q75_lanczos.jpg alt="La Sécurité dès la conception du projet (quickie)" loading=lazy>
 </a>
 </div>
 </div>
