--- a/talk/agilite-et-securite-numeriques/index.html
+++ b/talk/agilite-et-securite-numeriques/index.html
@@ -233,7 +233,7 @@ Sophia Security Camp 2019
 <h3>Related</h3>
 <ul>
 <li><a href=/website/talk/la-securite-des-la-conception-du-projet/>La Sécurité dès la conception du projet</a></li>
-<li><a href=/website/talk/la-securite-des-la-conception-du-projet/>La Sécurité dès la conception du projet</a></li>
+<li><a href=/website/talk/la-securite-des-la-conception-du-projet-quickie/>La Sécurité dès la conception du projet (quickie)</a></li>
 <li><a href=/website/talk/la-sauvegarde-de-kerberos/>La Sauvegarde de Kerberos</a></li>
 <li><a href=/website/talk/security-by-design/>Security By Design</a></li>
 <li><a href=/website/slides/ssc2019/>Agilité et sécurité numériques, Cas concret avec la sauvegarde automatisée de Kerberos</a></li>
