deploy: 470ba450e41ae6f6121cd816a11a276a9fff1ba1

--- a/404.html
+++ b/404.html
@@ -124,7 +124,7 @@
 <h2>Latest</h2>
 <ul>
 <li><a href=/website/event/>Recent & Upcoming Talks</a></li>
-<li><a href=/website/talk/iaas-interruption-as-a-sageness/>IaaS - Interruption as a Sageness</a></li>
+<li><a href=/website/talk/interruption-as-a-sageness-iaas/>Interruption as a Sageness (IaaS)</a></li>
 <li><a href=/website/talk/pere-castor-format-meetup/>Père Castor (Format Meetup)</a></li>
 <li><a href=/website/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor, raconte nous une histoire (d'OPS)</a></li>
 <li><a href=/website/talk/les-briques-du-cloud-speciale-cloud-nord-s01e01/>Les Briques du Cloud - Spéciale Cloud Nord (S01E01)</a></li>
