--- a/event/index.html
+++ b/event/index.html
@@ -131,9 +131,9 @@
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
-<a href=/website/talk/iaas-interruption-as-a-sageness/>IaaS - Interruption as a Sageness</a>
+<a href=/website/talk/interruption-as-a-sageness-iaas/>Interruption as a Sageness (IaaS)</a>
 </div>
-<a href=/website/talk/iaas-interruption-as-a-sageness/ class=summary-link>
+<a href=/website/talk/interruption-as-a-sageness-iaas/ class=summary-link>
 <div class=article-style>
 Le Legacy, le pire des soucis&mldr;
 </div>
@@ -153,8 +153,8 @@ David Aparicio</span>
 </div>
 </div>
 <div class=ml-3>
-<a href=/website/talk/iaas-interruption-as-a-sageness/>
-<img src=/website/talk/iaas-interruption-as-a-sageness/featured_hue13e940193f20a64125118b82e7732d0_449682_150x0_resize_q75_lanczos.jpg alt="IaaS - Interruption as a Sageness" loading=lazy>
+<a href=/website/talk/interruption-as-a-sageness-iaas/>
+<img src=/website/talk/interruption-as-a-sageness-iaas/featured_hue13e940193f20a64125118b82e7732d0_449682_150x0_resize_q75_lanczos.jpg alt="Interruption as a Sageness (IaaS)" loading=lazy>
 </a>
 </div>
 </div>
