deploy: bc8ce34c46c3f6323a4c6c5ef1a5271fdc2489e2

--- a/event/index.html
+++ b/event/index.html
@@ -161,9 +161,9 @@ David Aparicio</span>
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
-<a href=/website/talk/pere-castor-format-meetup/>Père Castor (Format Meetup)</a>
+<a href=/website/talk/iaas-interruption-as-a-sageness-%5C#hugops/>IaaS (Interruption as a Sageness) \#HugOps</a>
 </div>
-<a href=/website/talk/pere-castor-format-meetup/ class=summary-link>
+<a href=/website/talk/iaas-interruption-as-a-sageness-%5C#hugops/ class=summary-link>
 <div class=article-style>
 A l&rsquo;approche d&rsquo;Halloween, qu&rsquo;est-ce qui fait le plus peur ?
 </div>
@@ -181,10 +181,15 @@ A l&rsquo;approche d&rsquo;Halloween, qu&rsquo;est-ce qui fait le plus peur ?
 David Aparicio</span>
 </div>
 </div>
+<div class=btn-links>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=/website/talks/CafeDevOps2021_IaaS.pdf target=_blank rel=noopener>
+Slides
+</a>
+</div>
 </div>
 <div class=ml-3>
-<a href=/website/talk/pere-castor-format-meetup/>
-<img src=/website/talk/pere-castor-format-meetup/featured_hubf80c8e9273fd19d5aeb1fd5f32c0704_190639_150x0_resize_q75_lanczos.jpg alt="Père Castor (Format Meetup)" loading=lazy>
+<a href=/website/talk/iaas-interruption-as-a-sageness-%5C#hugops/>
+<img src=/website/talk/iaas-interruption-as-a-sageness-%5C#hugops/featured_hubf80c8e9273fd19d5aeb1fd5f32c0704_190639_150x0_resize_q75_lanczos.jpg alt="IaaS (Interruption as a Sageness) \#HugOps" loading=lazy>
 </a>
 </div>
 </div>
