--- a/talk/iaas-interruption-as-a-sageness/index.html
+++ b/talk/iaas-interruption-as-a-sageness/index.html
@@ -226,8 +226,8 @@ JUG SummerCamp 2021
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/website/talk/iaas-interruption-as-a-sageness-%5C#hugops/>IaaS (Interruption as a Sageness) \#HugOps</a></li>
 <li><a href=/website/talk/interruption-as-a-sageness-iaas/>Interruption as a Sageness (IaaS)</a></li>
-<li><a href=/website/talk/pere-castor-format-meetup/>Père Castor (Format Meetup)</a></li>
 <li><a href=/website/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor, raconte nous une histoire (d'OPS)</a></li>
 <li><a href=/website/talk/iaas-talk-only-no-slides/>IaaS, talk only (no slides)</a></li>
 </ul>
