deploy: cc0e4ffb6d0c2d8c7a8e80b3b2ad7a27027f2954

--- a/event/index.html
+++ b/event/index.html
@@ -161,9 +161,9 @@ David Aparicio</span>
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
-<a href=/website/talk/iaas-interruption-as-a-sageness-%5C#hugops/>IaaS (Interruption as a Sageness) \#HugOps</a>
+<a href=/website/talk/iaas-interruption-as-a-sageness-meetup/>IaaS, Interruption as a Sageness (meetup)</a>
 </div>
-<a href=/website/talk/iaas-interruption-as-a-sageness-%5C#hugops/ class=summary-link>
+<a href=/website/talk/iaas-interruption-as-a-sageness-meetup/ class=summary-link>
 <div class=article-style>
 A l&rsquo;approche d&rsquo;Halloween, qu&rsquo;est-ce qui fait le plus peur ?
 </div>
@@ -188,8 +188,8 @@ Slides
 </div>
 </div>
 <div class=ml-3>
-<a href=/website/talk/iaas-interruption-as-a-sageness-%5C#hugops/>
-<img src=/website/talk/iaas-interruption-as-a-sageness-%5C#hugops/featured_hubf80c8e9273fd19d5aeb1fd5f32c0704_190639_150x0_resize_q75_lanczos.jpg alt="IaaS (Interruption as a Sageness) \#HugOps" loading=lazy>
+<a href=/website/talk/iaas-interruption-as-a-sageness-meetup/>
+<img src=/website/talk/iaas-interruption-as-a-sageness-meetup/featured_hubf80c8e9273fd19d5aeb1fd5f32c0704_190639_150x0_resize_q75_lanczos.jpg alt="IaaS, Interruption as a Sageness (meetup)" loading=lazy>
 </a>
 </div>
 </div>
