--- a/404.html
+++ b/404.html
@@ -125,7 +125,7 @@
 <ul>
 <li><a href=/website/event/>Recent & Upcoming Talks</a></li>
 <li><a href=/website/talk/interruption-as-a-sageness-iaas/>Interruption as a Sageness (IaaS)</a></li>
-<li><a href=/website/talk/iaas-interruption-as-a-sageness-%5C#hugops/>IaaS (Interruption as a Sageness) \#HugOps</a></li>
+<li><a href=/website/talk/iaas-interruption-as-a-sageness-meetup/>IaaS, Interruption as a Sageness (meetup)</a></li>
 <li><a href=/website/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor, raconte nous une histoire (d'OPS)</a></li>
 <li><a href=/website/talk/les-briques-du-cloud-speciale-cloud-nord-s01e01/>Les Briques du Cloud - Spéciale Cloud Nord (S01E01)</a></li>
 <li><a href=/website/talk/iaas-interruption-as-a-sageness/>IaaS (Interruption as a Sageness)</a></li>
