--- a/talk/pere-castor-raconte-nous-une-histoire-dops/index.html
+++ b/talk/pere-castor-raconte-nous-une-histoire-dops/index.html
@@ -225,7 +225,7 @@ Cloud Nord 2021
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
-<li><a href=/website/talk/iaas-interruption-as-a-sageness-%5C#hugops/>IaaS (Interruption as a Sageness) \#HugOps</a></li>
+<li><a href=/website/talk/iaas-interruption-as-a-sageness-meetup/>IaaS, Interruption as a Sageness (meetup)</a></li>
 <li><a href=/website/talk/interruption-as-a-sageness-iaas/>Interruption as a Sageness (IaaS)</a></li>
 <li><a href=/website/talk/iaas-interruption-as-a-sageness/>IaaS (Interruption as a Sageness)</a></li>
 <li><a href=/website/talk/iaas-talk-only-no-slides/>IaaS, talk only (no slides)</a></li>
