deploy: 8995755df2386db8b1327ef7f6e749be273aea8e

--- a/talk/iaas-interruption-as-a-sageness/index.html
+++ b/talk/iaas-interruption-as-a-sageness/index.html
@@ -226,8 +226,9 @@ JUG SummerCamp 2021
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/website/talk/interruption-as-a-sageness-devops-d-day/>Interruption as a Sageness (DEVOPS D-DAY)</a></li>
 <li><a href=/website/talk/iaas-interruption-as-a-sageness-meetup/>IaaS, Interruption as a Sageness (meetup)</a></li>
-<li><a href=/website/talk/interruption-as-a-sageness-iaas/>Interruption as a Sageness (IaaS)</a></li>
+<li><a href=/website/talk/interruption-as-a-sageness-cloud-est/>Interruption as a Sageness (Cloud Est)</a></li>
 <li><a href=/website/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor, raconte nous une histoire (d'OPS)</a></li>
 <li><a href=/website/talk/iaas-talk-only-no-slides/>IaaS, talk only (no slides)</a></li>
 </ul>
