--- a/talk/les-briques-du-cloud-speciale-cloud-nord-s01e01/index.html
+++ b/talk/les-briques-du-cloud-speciale-cloud-nord-s01e01/index.html
@@ -128,9 +128,13 @@ David Aparicio</span>
 </div>
 </div>
 <div class="btn-links mb-3">
-<a class="btn btn-outline-primary btn-page-header" href=https://www.twitch.tv/videos/1169837703 target=_blank rel=noopener>
+<a class="btn btn-outline-primary btn-page-header" href=https://youtu.be/DkY1BA6M93g target=_blank rel=noopener>
 Video
 </a>
+<a class="btn btn-outline-primary btn-page-header" href=https://youtu.be/DkY1BA6M93g target=_blank rel=noopener>
+<i class="fab fa-youtube mr-1"></i>Youtube</a>
+<a class="btn btn-outline-primary btn-page-header" href=https://www.twitch.tv/videos/1169837703 target=_blank rel=noopener>
+<i class="fab fa-twitch mr-1"></i>Twitch</a>
 <a class="btn btn-outline-primary btn-page-header" href=https://twitter.com/dadideo/status/1446073878304935940 target=_blank rel=noopener>
 <i class="fab fa-twitter mr-1"></i>Twitter</a>
 </div>
@@ -145,6 +149,8 @@ Video
 <h3>Abstract</h3>
 <p class=pub-abstract><p>4 speakers de Cloud Nord sont invités à la table ronde des 5 bénévoles sur-vitaminés de la toute nouvelle émission Les Briques du Cloud (Rdv Des Speakers)</p>
 <p>Afin de présenter leurs talks ainsi que leur vision du Cloud tout en réagissant aux questions des auditeurs sur des sujets chauds comme la panne DNS de Facebook ou de Data leak de Twitch</p>
+<p>Core Team: Horacio Gonzalez (OVHcloud), François Teychene (StarTree), Sébastien Blanc (RedHat), Aurélie Vache (OVHcloud), Julien Lengrand-Lambert‏ (Adyen)</p>
+<p>Invités: Julien Landuré (Zenika), Cyril Lakech (QIMA), David Aparicio (OVHcloud), Tugdual Grall (GitHub)</p>
 <p>Les Rendez-vous des Speakers est une série de conférences techniques, de rencontres, d’ateliers et autres événements pour les développeurs. Plus d&rsquo;informations sur: <a href=https://rdv-speakers.fr/>https://rdv-speakers.fr/</a></p>
 </p>
 <div class=row>
@@ -224,6 +230,12 @@ Cloud Nord 2021
 <i class="fab fa-weibo"></i>
 </a>
 </li>
+</ul>
+</div>
+<div class="article-widget content-widget-hr">
+<h3>Related</h3>
+<ul>
+<li><a href=/website/talk/interruption-as-a-sageness-devops-d-day/>Interruption as a Sageness (DEVOPS D-DAY)</a></li>
 </ul>
 </div>
 </div>
