--- a/404.html
+++ b/404.html
@@ -124,7 +124,8 @@
 <h2>Latest</h2>
 <ul>
 <li><a href=/website/event/>Recent & Upcoming Talks</a></li>
-<li><a href=/website/talk/interruption-as-a-sageness-iaas/>Interruption as a Sageness (IaaS)</a></li>
+<li><a href=/website/talk/interruption-as-a-sageness-devops-d-day/>Interruption as a Sageness (DEVOPS D-DAY)</a></li>
+<li><a href=/website/talk/interruption-as-a-sageness-cloud-est/>Interruption as a Sageness (Cloud Est)</a></li>
 <li><a href=/website/talk/iaas-interruption-as-a-sageness-meetup/>IaaS, Interruption as a Sageness (meetup)</a></li>
 <li><a href=/website/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor, raconte nous une histoire (d'OPS)</a></li>
 <li><a href=/website/talk/les-briques-du-cloud-speciale-cloud-nord-s01e01/>Les Briques du Cloud - Spéciale Cloud Nord (S01E01)</a></li>
@@ -132,7 +133,6 @@
 <li><a href=/website/talk/5-conseils-pour-soumettre-son-premier-cfp/>5 Conseils pour soumettre son premier CFP</a></li>
 <li><a href=/website/talk/iaas-talk-only-no-slides/>IaaS, talk only (no slides)</a></li>
 <li><a href=/website/talk/la-securite-des-la-conception-du-projet/>La Sécurité dès la conception du projet</a></li>
-<li><a href=/website/talk/la-securite-des-la-conception-du-projet-quickie/>La Sécurité dès la conception du projet (quickie)</a></li>
 </ul>
 </div>
 </div>
