deploy: effbc1d65b45905388e30bd521f636dda773b384

--- a/talk/interruption-as-a-sageness-devops-d-day/index.html
+++ b/talk/interruption-as-a-sageness-devops-d-day/index.html
@@ -223,9 +223,9 @@ DEVOPS D-DAY, 6 edition
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/website/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor 🐻, raconte nous une histoire (d'OPS)</a></li>
 <li><a href=/website/talk/les-briques-du-cloud-speciale-cloud-nord-s01e01/>Les Briques du Cloud - Spéciale Cloud Nord (S01E01)</a></li>
 <li><a href=/website/talk/iaas-interruption-as-a-sageness-meetup/>IaaS, Interruption as a Sageness (meetup)</a></li>
-<li><a href=/website/talk/interruption-as-a-sageness-cloud-est/>Interruption as a Sageness (Cloud Est)</a></li>
 <li><a href=/website/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor, raconte nous une histoire (d'OPS)</a></li>
 <li><a href=/website/talk/iaas-interruption-as-a-sageness/>IaaS (Interruption as a Sageness)</a></li>
 </ul>
