--- a/talk/les-briques-du-cloud-speciale-cloud-nord-s01e01/index.html
+++ b/talk/les-briques-du-cloud-speciale-cloud-nord-s01e01/index.html
@@ -235,6 +235,7 @@ Cloud Nord 2021
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/website/talk/pere-castor-raconte-nous-une-histoire-dops/>Père Castor 🐻, raconte nous une histoire (d'OPS)</a></li>
 <li><a href=/website/talk/interruption-as-a-sageness-devops-d-day/>Interruption as a Sageness (DEVOPS D-DAY)</a></li>
 </ul>
 </div>
