--- a/talk/security-by-design/index.html
+++ b/talk/security-by-design/index.html
@@ -232,11 +232,11 @@ It was a proposal (accepted) for <a href=../agilite-et-securite-numeriques/>Soph
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/website/talk/la-securite-des-la-conception-du-projet-cloud-est/>La Sécurité dès la conception du projet (Cloud Est)</a></li>
 <li><a href=/website/talk/la-securite-des-la-conception-du-projet/>La Sécurité dès la conception du projet</a></li>
 <li><a href=/website/talk/la-securite-des-la-conception-du-projet-quickie/>La Sécurité dès la conception du projet (quickie)</a></li>
 <li><a href=/website/talk/la-sauvegarde-de-kerberos/>La Sauvegarde de Kerberos</a></li>
 <li><a href=/website/talk/agilite-et-securite-numeriques/>Agilité et sécurité numériques</a></li>
-<li><a href=/website/slides/ssc2019/>Agilité et sécurité numériques, Cas concret avec la sauvegarde automatisée de Kerberos</a></li>
 </ul>
 </div>
 </div>
