--- a/talk/la-sauvegarde-de-kerberos/index.html
+++ b/talk/la-sauvegarde-de-kerberos/index.html
@@ -234,11 +234,11 @@ This conference was given as a small version <a href=https://humantalks.com/citi
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/website/talk/la-securite-des-la-conception-du-projet-cloud-est/>La Sécurité dès la conception du projet (Cloud Est)</a></li>
 <li><a href=/website/talk/la-securite-des-la-conception-du-projet/>La Sécurité dès la conception du projet</a></li>
 <li><a href=/website/talk/la-securite-des-la-conception-du-projet-quickie/>La Sécurité dès la conception du projet (quickie)</a></li>
 <li><a href=/website/talk/security-by-design/>Security By Design</a></li>
 <li><a href=/website/talk/agilite-et-securite-numeriques/>Agilité et sécurité numériques</a></li>
-<li><a href=/website/slides/ssc2019/>Agilité et sécurité numériques, Cas concret avec la sauvegarde automatisée de Kerberos</a></li>
 </ul>
 </div>
 </div>
